--- a/components/Services Template.html
+++ b/components/Services Template.html
@@ -1,1 +1,21 @@
-
+<section id="services" class="section">
+  <h2>Our Services</h2>
+  <div class="icon-grid">
+    <div class="icon-box">
+      <i class="fas fa-cogs"></i>
+      <p>Lorem Ipsum</p>
+    </div>
+    <div class="icon-box">
+      <i class="fas fa-chart-line"></i>
+      <p>Dolor Sit Amet</p>
+    </div>
+    <div class="icon-box">
+      <i class="fas fa-lightbulb"></i>
+      <p>Consectetur</p>
+    </div>
+    <div class="icon-box">
+      <i class="fas fa-rocket"></i>
+      <p>Adipiscing Elit</p>
+    </div>
+  </div>
+</section>
